# CxC

./: .env.example  .gitignore  CLAUDE.md  README.md
backend/: README.md  changelog.md  pyproject.toml
backend/app/: __init__.py  api.py  config.py  db.py  main.py  schemas.py
backend/app/services/: __init__.py  backboard.py  backtest.py  beliefs.py  embeddings.py  features.py  ingest.py  news.py  observability.py  pipeline.py  polymarket.py  precognition.py  smartcrowd.py  snowflake.py  snowflake_backup.py  sync.py  weights.py
backend/scripts/: load_polymarket.py  seed_demo_data.py  sync_runner.py
docs/: ai-divergence-explainer.md  backend-design.md  frontend-tree.md
frontend/: DESIGN.md  package.json  pnpm-lock.yaml
frontend/public/: backboardlogo.avif
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/src/app/alerts/: page.tsx
frontend/src/app/backtest/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/screener/: page.tsx
frontend/src/components/alerts/: AlertCard.tsx  AlertsList.tsx
frontend/src/components/background/: SignalLensBackground.tsx  ThreeTechnologyBackground.tsx
frontend/src/components/backtest/: BacktestSummary.tsx  BrierSweepChart.tsx  EdgeBuckets.tsx  EdgeBucketsChart.tsx  ImprovementChart.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/components/market/: DivergenceExplainer.module.css  DivergenceExplainer.tsx  FlowSummaryPanel.tsx  ProbabilityChart.tsx  ProbabilityLatticeScene.tsx  (+3 more)
frontend/src/lib/: api.ts  types.ts
frontend/src/providers/: QueryProvider.tsx
(+22 files in other folders)
