[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "precognition-backend"
version = "0.1.0"
description = "Wallet-weighted Precognition forecasting backend MVP"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "requests>=2.32,<3.0",
  "feedparser>=6.0,<7.0",
  "snowflake-connector-python>=3.6,<4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
